# vortex

./: .cloc.defs  .gitignore  .gitignore.swp  .gitlab-ci.yml  .project  .pydevproject  .readthedocs.yaml  CONTRIBUTING.md  LICENSE-en.txt  LICENSE-fr.txt  Makefile  README.md  deploy  pyproject.toml
conf/: address-book.ini  alpha-map-resources.ini  auth-perms-actions.ini  auth-users-groups.ini  bdpe-map-resources.ini  binset-map-resources.ini  cache-aa.ini  cache-beaufix.ini  cache-belenos.ini  cache-epona.ini  cache-prolix.ini  cache-taranis.ini  cen-map-resources.ini  cenmail-inventory.ini  geometries.ini  gget-key-specific-conf.ini  helper-namselect.ini  iga-map-resources.ini  inventory.ini  jeeves-async.ini  jeeves-noop.ini  jeeves-phase.ini  jeeves-route.ini  jeeves-test.ini  jeeves_async.ini  jeeves_noop.ini  job-default.ini  job-oper-default.ini  job-test-default.ini  job.default.ini  olivemail-inventory.ini  oparchive-collector.ini  oparchive-glue.ini  opbdpe.ini  opmail-address-book.ini  opmail-catalog.ini  opmail-directory.ini  opmail-inventory.ini  opnam-oper-default.yaml  optables-oper-default.yaml  (+27 more)
examples/: actions.py  alarm.py  algo.py  algocoupling.py  algofc.py  algofclam.py  askjeeves.py  bdpe_extract.py  bdpe_extract_cdp.sh  cenmail.py  checkonly.py  clim.py  cont.py  context.py  cpfoo.py  ctxvoid.py  cycles.py  daemonbasic.py  dayfile.py  dealing_with_dates_and_terms.py  dealing_with_glob.py  dealing_with_hooks.py  dealing_with_namelist.py  drivers.py  ecfs.py  ectrans.py  envoi.py  envoi_test.py  fcdemo.py  fcolive.py  fcoptask.py  fcreview.py  (+42 more)
(+1235 files in other folders)
